# rust-be-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO  build.rs  build.sh  clippy.toml  compose.yaml  run.sh  run_debug.sh  schema.rs  visitor.py
.cargo/: config.toml
docs/: agent-reference.md
i18n/ui/: en-US.json  ko-KR.json
migrations/2025-01-20-045254_create_users/: up.sql
migrations/2025-01-22-071900_extend_users/: down.sql  up.sql
migrations/2025-02-16-165934_drop_refresh_table/: down.sql
migrations/2025-02-18-045958_posts_tables/: up.sql
migrations/2025-02-21-054839_user_roles/: up.sql
migrations/2025-03-02-065637_posts_metadata/: up.sql
migrations/2025-03-02-103951_upvotes/: up.sql
migrations/2025-03-02-104316_comment_upvotes/: up.sql
migrations/2025-03-04-043420_country_language_subdivision_phone_and_currency_codes/: up.sql
migrations/2025-03-05-012442_language_insert/: down.sql
migrations/2025-03-05-013733_currency_insert/: schema.rs  up.sql
migrations/2025-03-05-020840_drop_iso_phone_prefix_table/: down.sql  up.sql
migrations/2025-03-05-035450_country_insert/: down.sql  up.sql
migrations/2025-03-06-044730_country_emoji_insert/: up.sql
migrations/2025-03-06-054004_country_subdivisions_insert/: conv.py  conv.sql  down.sql
migrations/2025-03-22-104939_profile_picture_history/: down.sql  up.sql
migrations/2025-04-14-075418_downvote_and_denormalized_count/: down.sql  up.sql
migrations/2025-04-29-005518_i18n/: up.sql
migrations/2025-07-09-065813_geomapping/: down.sql  up.sql
migrations/2025-11-10-061116-0000_define_roles/: down.sql  up.sql
migrations/2025-12-02-213328-0000_photographs/: down.sql  up.sql
migrations/2025-12-02-225131-0000_photographs_comments_and_place/: down.sql  up.sql
migrations/2025-12-02-233627-0000_photograph_thumbnail/: down.sql  up.sql
migrations/2026-02-04-230000-0000_photograph_context/: down.sql  up.sql
migrations/2026-02-04-233000-0000_photograph_context_enum/: down.sql  up.sql
migrations/2026-02-05-062120-0000_wasm_storage/: down.sql  up.sql
migrations/2026-02-05-120000-0000_wasm_bundle_blob/: down.sql  up.sql
migrations/2026-04-23-190000-0000_live_chat/: down.sql  up.sql
migrations/2026-04-24-000000-0000_i18n_system_user/: down.sql  up.sql
migrations/2026-04-24-010000-0000_live_chat_bans/: down.sql  up.sql
migrations/2026-06-09-000000-0000_i18n_null_subdivision_unique/: down.sql  up.sql
migrations/2026-06-17-000000-0000_photograph_social/: down.sql  up.sql
migrations/2026-06-18-000000-0000_live_chat_calls/: down.sql  up.sql
src/: build_info.rs  docs.rs  main.rs  schema.rs
src/domain/: blog.rs  country.rs  domain_traits.rs  mod.rs  user.rs
src/domain/auth/: mod.rs  role.rs  user.rs  user_roles.rs
src/domain/blog/: blog.rs  mod.rs
src/domain/geo/: mod.rs  osm_service.rs  visitation_data.rs
src/domain/i18n/: i18n.rs  i18n_cache.rs  mod.rs
src/domain/live_chat/: ban.rs  binary_codec.rs  cache.rs  call.rs  guest_nickname.rs  message.rs  mod.rs  rtc.rs
src/domain/photographs/: photographs.rs
src/domain/photography/: mod.rs  photographs.rs  social.rs
src/domain/wasm_module/: mod.rs  wasm_module.rs
src/dto/requests/: mod.rs
src/dto/responses/: mod.rs  response_data.rs  response_meta.rs
src/errors/: code_error.rs  mod.rs
src/handlers/: fallback.rs  mod.rs  root.rs
src/handlers/admin/: get_host_stats.rs  mod.rs  sync_i18n_cache.rs
src/handlers/auth/: check_if_user_exists.rs  delete_account.rs  is_superuser.rs  login.rs  logout.rs  me.rs  mod.rs  resend_email_verification_email.rs  reset_password.rs  reset_password_request.rs  signup.rs  verify_user_email.rs
src/handlers/blog/: delete_comment.rs  delete_post.rs  get_posts.rs  mod.rs  read_post.rs  rescind_comment_upvote.rs  rescind_comment_vote.rs  rescind_post_upvote.rs  rescind_post_vote.rs  search_posts.rs  submit_comment.rs  submit_post.rs  update_comment.rs  update_post.rs  upload_profile_picture.rs  upvote_comment.rs  upvote_post.rs  vote_comment.rs  vote_post.rs
src/handlers/countries/: get_countries.rs  get_country.rs  get_language.rs  get_languages.rs  get_subdivisions_for_country.rs  mod.rs
src/handlers/geo_ip/: lookup_ip.rs  lookup_my_ip.rs  mod.rs
src/handlers/i18n/: get_country_language_bundle.rs  get_ui_text_bundle.rs  mod.rs
src/handlers/live_chat/: cache_stats.rs  get_messages.rs  mod.rs  ws.rs
src/handlers/photography/: batch_list.rs  batch_status.rs  batch_upload.rs  delete_photograph_comment.rs  delete_photographs.rs  get_photographs.rs  mod.rs  read_photograph.rs  rescind_photograph_comment_vote.rs  rescind_photograph_vote.rs  submit_photograph_comment.rs  update_photograph_comment.rs  upload_photograph.rs  vote_photograph.rs  vote_photograph_comment.rs
src/handlers/server/: fallback.rs  get_host_fastfetch.rs  healthcheck.rs  lookup_ip_loc.rs  mod.rs  root.rs  visitor_board.rs
src/handlers/user/: check_if_user_exists.rs  get_user_info.rs  login.rs  logout.rs  mod.rs  reset_password.rs  reset_password_request.rs  signup.rs  upload_profile_picture.rs  verify_user_email.rs
src/handlers/wasm_module/: delete_wasm_module.rs  get_wasm_modules.rs  mod.rs  serve_wasm.rs  update_wasm_module.rs  update_wasm_module_assets.rs  upload_wasm_module.rs
src/init/: compile_regex.rs  config.rs  db_migrations.rs  mod.rs  server_init.rs  state.rs
src/init/load_cache/: fastfetch_cache.rs  mod.rs  post_info.rs  system_info.rs
src/init/search/: mod.rs  query.rs
src/init/state/: builder.rs  deployment_environment.rs  mod.rs  server_state.rs  session.rs
src/jobs/: mod.rs
src/jobs/auth/: mod.rs  purge_nonverified_users.rs  update_fastfetch_cache.rs  update_system_stats.rs
src/jobs/job_funcs/: every_day.rs  every_hour.rs  every_minute.rs  every_month.rs  every_second.rs  every_week.rs  every_year.rs  init_scheduler.rs  mod.rs
src/jobs/maintenance/: compress_logs.rs  flush_photograph_views.rs  flush_visitor_logs.rs  mod.rs  prune_live_chat.rs  (+1 more)
src/routers/: main_router.rs  mod.rs
src/routes/: main_router.rs
src/util/: mod.rs  now.rs  s3.rs  wasm_bundle.rs
src/util/auth/: mod.rs  (+1 more)
(+156 files in other folders)
