[package]
name = "rust-be-template"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[[bin]]
name = "process_ip2location_dbs"
path = "src/util/geographic/process_ip2location_dbs.rs"

[dependencies]
# web framework
axum = { version = "0.8.6", features = [
    "http2",
    "multipart",
    "ws",
    "macros",
    "multipart",
] }
axum-extra = { version = "0.10.3", features = ["cookie", "attachment", "form"] }
axum-server = { version = "0.7.2", features = ["tls-rustls", "tokio-rustls"] }
tower-http = { version = "0.6.6", features = [
    "compression-zstd",
    "trace",
    "cors",
    "fs",
] }

# parallelism
# rayon = "1.10.0"

# ORM
diesel = { version = "2.3.2", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
    "ipnet-address",
] }
diesel-async = { version = "0.7.3", features = ["bb8", "postgres"] }


# .env loading
dotenvy = "0.15.7"

# async runtime
tokio = { version = "1.48.0", features = ["full"] }

# loggers
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }
tracing-appender = "0.2.3"

# error
anyhow = "1.0.100"

# system information
num_cpus = "1.17.0"
sysinfo = "0.37.2"

# serialization/deserialization
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
bitcode = "0.6.7"

# types
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
scc = "3.3.1"
uuid = { version = "1.18.1", features = [
    "v4",
    "v7",
    "serde",
    "zerocopy",
    "fast-rng",
] }
ipnet = "2.11.0"

# regex/verification
# regex = { version = "1.11.1", features = ["perf-dfa-full"] }
email_address = "0.2.9"

# crypto/rand
argon2 = "0.5.3"
rand = "0.9"
rand_08 = { package = "rand", version = "0.8.5" }
rustls = { version = "0.23.32", features = [] }
zeroize = { version = "1.8.2", features = ["derive"] }

# memory allocator
mimalloc = "0.1.48"

# email
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
    "serde",
] }

# compression
zstd = { version = "0.13.3", features = ["fat-lto", "zstdmt", "pkg-config"] }

# numeric
bigdecimal = { version = "0.4.8", features = ["serde"] }

# image processing
image = "0.25.8"

# markdown
comrak = { version = "0.44.0", features = ["emojis", "shortcodes"] }

# request to external
reqwest = { version = "0.12.24", features = ["rustls-tls", "gzip"] }

# embed assets into binary
rust-embed = "8.7.2"
mime_guess = "2.0.5"

# internment
internment = "0.8.6"

# aws
aws-sdk-s3 = { version = "1.108.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.8", features = [
    "rustls",
    "behavior-version-latest",
] }
aws-types = "1.3.9"

[build-dependencies]
chrono = { version = "0.4.42" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
