[package]
name = "rust-be-template"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[[bin]]
name = "process_ip2location_dbs"
path = "src/util/geographic/process_ip2location_dbs.rs"

[dependencies]
# web framework
axum = { version = "0.8.8", features = [
    "http2",
    "multipart",
    "ws",
    "macros",
    "multipart",
] }
axum-extra = { version = "0.12.5", features = ["cookie", "attachment", "form"] }
axum-server = { version = "0.8.0", features = ["tls-rustls", "tokio-rustls"] }
tower-http = { version = "0.6.8", features = [
    "compression-gzip",
    "trace",
    "cors",
    "fs",
] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

# parallelism
# rayon = "1.10.0"

# ORM
diesel = { version = "2.3.6", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
    "ipnet-address",
] }
diesel-async = { version = "0.7.4", features = ["bb8", "postgres"] }

# .env loading
dotenvy = "0.15.7"

# async runtime
tokio = { version = "1.49.0", features = ["full"] }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-appender = "0.2.4"

# error
anyhow = "1.0.101"

# system information
num_cpus = "1.17.0"
walkdir = "2.5.0"
# sysinfo = "0.37.2"

# serialization/deserialization
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
bitcode = "0.6.9"
flate2 = "1.1.9"

# types
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
scc = "3.6.2"
uuid = { version = "1.21.0", features = [
    "v4",
    "v7",
    "serde",
    "zerocopy",
    "fast-rng",
] }
ipnet = "2.11.0"

# regex/verification
# regex = { version = "1.11.1", features = ["perf-dfa-full"] }
email_address = "0.2.9"

# crypto/rand
argon2 = "0.5.3"
rand = "0.10"
rand_08 = { package = "rand", version = "0.8.5" }
rustls = { version = "0.23.36", features = [] }
zeroize = { version = "1.8.2", features = ["derive"] }

# memory allocator
mimalloc = { version = "0.1.48", features = ["v3"] }

# email
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
    "serde",
] }

# numeric
bigdecimal = { version = "0.4.10", features = ["serde"] }

# image processing
image = "0.25.9"
fast_image_resize = { version = "6.0.0", features = ["image"]}
kamadak-exif = "0.6.1"

# markdown
comrak = { version = "0.50.0", features = ["emojis", "shortcodes"] }
ansi-to-html = "0.2.2"

# full-text search
tantivy = "0.25"

# request to external
reqwest = { version = "0.13.2", features = ["gzip", "query"] }

# embed assets into binary
rust-embed = "8.11.0"
mime_guess = "2.0.5"

# internment
internment = "0.8.6"

# aws
aws-sdk-s3 = { version = "1.123.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.14", features = [
    "rustls",
    "behavior-version-latest",
] }
aws-types = "1.3.12"
tower_governor = { version = "0.8.0", features = ["tracing"] }

# enable for dockerization?
# encryption
# openssl = { version = "0.10.74", features = ["vendored"] }

[build-dependencies]
chrono = { version = "0.4.43" }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.182", features = [] }
zstd = { version = "0.13.3", features = ["fat-lto", "zstdmt", "pkg-config"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation", "Win32_System_Threading"] }
zstd = { version = "0.13.3", features = ["fat-lto", "zstdmt"] }
